--- a/_site.yml
+++ b/_site.yml
@@ -6,3 +6,5 @@ navbar:
       href: index.html
     - text: "Case Study 1"
       href: beer_industry_analysis_for_budweiser.html
+    - text: "Beer App"
+      href: beerAppLink.html
